Changed media, color, texts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 
 :root {
   --background: #ffffff;
-  --secondBackground: #f1dfdf;
-  --shadowColor: #d3b8b8;
-  --hoverColor: #977a7a;
+  --secondBackground: #dcf8fe;
+  --shadowColor: #a3ecfe;
+  --hoverColor: #9fdefd;
   --font: Elephant;
 }
 @font-face {
